230830 요청사항 수정, 문구 수정

--- a/microre/app/page.module.scss
+++ b/microre/app/page.module.scss
@@ -170,7 +170,8 @@
 .descriptionArea { 
   
   h2{
-    font-size:37.9px;
+    // font-size:37.9px;
+    font-size:35.1px;
     color:black;
   }
 
@@ -397,7 +398,8 @@
     margin-right:36px;
     
     h2{
-      font-size:20px;
+      // font-size:20px;
+      font-size:18px;
     }
   
     p{
